# Modern-CMake

./: .gitattributes  .gitignore  CMakeLists.txt  config.cmake.in
C_XyzExecutable/: CMakeLists.txt  main.c
XyzExecutable/: CMakeLists.txt  main.cpp
XyzLibrary/: CMakeLists.txt
XyzLibrary/headers/: CXyz.h  IXyz.h  SXyz.h  XyzLibrary.h
XyzLibrary/sources/: CXyz.cpp  IXyz.cpp  SXyz.cpp
